syntax = "proto3";
package tws.proto.jobmaster;

import "twister2/proto/job.proto";

option java_package = "edu.iu.dsc.tws.proto.jobmaster";
option java_outer_classname = "JobMasterAPI";

//*****************************************************
// a note:
// oneof structs are added to workerID fields
// main reason is to force the workerID to be encoded and logged when its value is zero.
// if we do not use oneof, the value zero is not logged.
// The reason for that seems to be that zero is the default value,
// and it is not encoded and transferred.
//
// an advantage of this solution is that each message must have workerID field set.
// that is positive I think.
//*****************************************************

// job master can be any one of these states
// job master does not go from STARTING to RUNNING, it just goes to STARTED
// since enum types must be unique in a proto, I added JM as a prefix to this enum.
enum JobMasterState {
    JM_STARTED = 0;
    JM_RESTARTED = 1;
    JM_COMPLETED = 2;
    JM_FAILED = 3;
    JM_KILLED = 4;
}

// a worker can be any one of these states
enum WorkerState {
    STARTED = 0;
    RESTARTED = 1;
    COMPLETED = 2;
    FAILED = 3;
    ERROR = 4;
    UNASSIGNED = 5;
    KILLED = 6;
    FULLY_FAILED = 7; // fully failed. will not try to restart. job should fail.
}

message NodeInfo {
    string nodeIP = 1;
    string rackName = 2;
    string dataCenterName = 3;
}

//
// Information about a worker in a job
//
message WorkerInfo {
    oneof required {
        int32 workerID = 1;
    }
    string workerIP = 2;
    int32 port = 3;

    NodeInfo nodeInfo = 4;
    tws.proto.job.ComputeResource computeResource = 5;
    map<string, int32> additionalPort = 6;
}

enum BarrierType {
    DEFAULT = 0;
    INIT = 1;
}

// possible results for barriers
enum BarrierResult {
    SUCCESS = 0;
    TIMED_OUT = 1;
    JOB_FAULTY = 2;
}

/////////////////////////////////////////////////////////////////
// Message types published to ZooKeeper event queue for workers to consume
// Job Master informs workers regarding the events in the job
/////////////////////////////////////////////////////////////////

message JobEvent {
    oneof onlyOneEvent {
        WorkerFailed failed = 1;
        WorkerRestarted restarted = 2;
        AllJoined allJoined = 3;
        BarrierDone barrierDone = 4;
        JobMasterRestarted jmRestarted = 5;
        JobScaled jobScaled = 6;
    }
}

message WorkerFailed {
    oneof idRequired {
        int32 workerID = 1;
    }
}

message WorkerRestarted {
    oneof workerInfoRequired {
        WorkerInfo workerInfo = 1;
    }
}

message AllJoined {
    oneof required {
        int32 numberOfWorkers = 1;
    }
    repeated WorkerInfo workerInfo = 2;
}

message BarrierDone {
    oneof typeRequired {
        BarrierType barrierType = 1;
    }
    oneof resultRequired {
        BarrierResult result = 2;
    }
}

message JobMasterRestarted {
    int32 numberOfWorkers = 1;
    string jmAddress = 2;
}

// the number of workers in the job has hanged
// if change is positive, new workers added
// if change is negative, some worker instances removed
// numberOfWorkers shows the updated numberOfWorkers in the job
message JobScaled {
    oneof changeRequired {
        int32 change = 1;
    }
    oneof numberOfWorkersRequired {
        int32 numberOfWorkers = 2;
    }
}

/////////////////////////////////////////////////////////////////
// Message types exchanged between Job Master and Workers
/////////////////////////////////////////////////////////////////

// this message is sent when the worker is about to start
// it registers itself with the job master
// its status in job master becomes: STARTING when this message is received
message RegisterWorker {
    oneof idRequired {
        int32 workerID = 1;
    }

    // how many times this worker is restarted
    // zero means it is starting for the first time
    // 1 means it is restarted one time
    oneof restartCountRequired {
        int32 restartCount = 2;
    }

    oneof workerInfoRequired {
        WorkerInfo workerInfo = 3;
    }
}

message RegisterWorkerResponse {
    oneof idRequired {
        int32 workerID = 1;
    }
    oneof resultRequired {
        bool result = 2;
    }
    string reason = 3;
}

// a worker informs the master that its state has changed
// this message is not sent for STARTING state, it is covered by RegisterWorker message
// this message is sent for states: RUNNING and COMPLETED
// later on, we may add more states
message WorkerStateChange {
    oneof idRequired {
        int32 workerID = 1;
    }
    oneof stateRequired {
        WorkerState state = 2;
    }
}

// sent by the master to the worker
// to inform that its state change message has been received
message WorkerStateChangeResponse {
    oneof idRequired {
        int32 workerID = 1;
    }
    oneof stateRequired {
        WorkerState state = 2;
    }
}

// Get the list of wokers in a job from the job master
message ListWorkersRequest {
    enum RequestType {
        IMMEDIATE_RESPONSE = 0;
        RESPONSE_AFTER_ALL_JOINED = 1;
    }

    oneof idRequired {
        int32 workerID = 1;
    }
    oneof typeRequired {
        RequestType requestType = 2;
    }
}

// Job master returns the list of workers in a job to a worker
message ListWorkersResponse {
    int32 numberOfWorkers = 1;
    repeated WorkerInfo worker = 2;
}

// All workers in a job wants to wait in a Barrier point
// When BarrierRequest message is received from all workers in the job,
// Job Master will send response messages to all
// previous request messages are queued until the last request message is received
// failures:
// if the barrier times out, barrier fails
// if a worker fails in the job, the default barrier fails if there is any
message BarrierRequest {
    oneof idRequired{
        int32 workerID = 1;
    }
    oneof typeRequired {
        BarrierType barrierType = 2;
    }
    oneof timeoutRequired{
        int64 timeout = 3;
    }
}

message BarrierResponse {
    oneof required {
        int32 workerID = 1;
    }
    oneof typeRequired {
        BarrierType barrierType = 2;
    }
    oneof resultRequired {
        BarrierResult result = 3;
    }
}

// Driver to workers communication related messages
// let the the workers know that
// Driver to worker message
// Driver can send any byte array to workers including serialized protocol buffer messages
// It is encoded as a byte array
message DriverMessage {
    bytes data = 1;
}

// Worker to Driver message
// Worker can send any byte array to the driver including serialized protocol buffer messages
message WorkerMessage {
    bytes data = 1;
    oneof required {
        int32 workerID = 2;
    }

}

// WorkerToDriver response message
// if it fails, reason will have a string explaining the problem
message WorkerMessageResponse {
    oneof required {
        bool succeeded = 1;
    }
    string reason = 2;
}

